// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-kAzzGY ixgfns"
  >
    <table
      className="sc-chPdSV elxaxc"
    >
      <tbody
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            US
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            PL
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Warsaw
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            DE
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Berlin
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            FR
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Paris
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            ES
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Madird
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            —
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-kAzzGY ixgfns"
  >
    <table
      className="sc-chPdSV elxaxc"
    >
      <thead
        className="sc-kgoBCf kVSTZj"
      >
        <tr
          className="sc-kpOJdX chesuL"
        >
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Code
          </th>
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Capital
          </th>
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            US
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            PL
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Warsaw
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            DE
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Berlin
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            FR
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Paris
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            ES
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Madird
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            —
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-kAzzGY ixgfns"
  >
    <table
      className="sc-chPdSV elxaxc"
    >
      <thead
        className="sc-kgoBCf kVSTZj"
      >
        <tr
          className="sc-kpOJdX chesuL"
        >
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            #
          </th>
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Code
          </th>
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Capital
          </th>
          <th
            className="sc-ckVGcZ ezjZjB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            1
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            US
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            2
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            PL
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Warsaw
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            3
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            DE
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Berlin
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            4
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            FR
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Paris
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            5
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            ES
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Madird
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kpOJdX chesuL"
        >
          <td
            className="sc-jKJlTe kocCZD"
          >
            6
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            —
          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-dxgOiQ jqZvNY"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
